# key_db

./: .gitignore  Cargo.toml  README.md  pickled.db  pyproject.toml  requirements.txt  temp.db  test.db  test_shutdown.py  testy.db
.env/: pyvenv.cfg
src/: aol.rs  db.rs  errors.rs  lib.rs  utils.rs
src/aol/: commands.rs  log_io.rs  mod.rs
test/: conftest.py  test_crud.py  test_performance.py  test_persistence.py
test/benchmarks/: performance_results.txt  test_performance.py
test/integration/: test_crud.py
