[package]
name = "key_db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "key_db"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.17.0", features = ["extension-module"] }
serde_json = "1.0"
serde = { version= "1.0.144" , features=["derive"]}
ctrlc = "3.2.3"
pythonize = "0.17.0"
